--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
                 <div class="md:w-1/3 md:border-l md:border-gray-300 md:pl-10">
                     <h3 class="text-xl font-bold mb-6 text-purple-oven flex items-center gap-2">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
                         </svg>
                         Contact Us
                     </h3>
@@ -1070,9 +1071,23 @@ END:VCALENDAR`;
                                     <ol class="list-decimal list-inside text-sm text-gray-600 space-y-1">
                                         <li>Our team receives your order.</li>
                                         <li>We check item availability.</li>
-                                        <li>You receive a confirmation message with the final bill.</li>
+                                        <li>You receive a confirmation message/call with the final bill.</li>
                                     </ol>
                                 </div>
+                                
+                                <!-- New Calendar Button -->
+                                <button type="button" onclick="downloadICS()"
+                                    class="w-full sm:w-auto px-6 py-2 bg-indigo-500 hover:bg-indigo-600 text-white font-semibold rounded-full shadow-md transform transition hover:-translate-y-0.5 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 mb-4 flex items-center justify-center mx-auto">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+                                    </svg>
+                                    Add Reminder to Calendar
+                                </button>
+                                <!-- End New Calendar Button -->
+
+                                <p class="text-xs text-gray-500">
+                                    Note: Your order is <strong>not confirmed</strong> until you send the email and receive a reply from our team.
+                                </p>
                                 
                                 <button type="button" onclick="showLanding()" class="mt-8 text-purple-oven font-medium hover:underline text-sm">
                                     Back to Home
