--- a/index.html
+++ b/index.html
@@ -936,8 +936,8 @@
                             <!-- Important Notice Section (Checkbox Removed) -->
                             <div class="mb-8 bg-purple-50 border border-purple-200 rounded-lg p-4 text-sm text-gray-700">
                                 <p class="font-bold text-gray-900 mb-2">Important Notice:</p> 
-                                <p class="mb-2">As we bake in limited quantities daily, please allow us to confirm the availability of your order prior to sending the bill.</p>
-                                <p class="mb-0">Your order will be prepared and set aside for you as soon as full payment has been received by our team.</p>
+                                <p class="mb-2">As we bake in limited quantities daily, please allow us to check the availability of your order.</p>
+                                <p class="mb-0">We shall call you as soon as we can confirm your order.</p>
                             </div>
 
                             <div class="text-center pt-4 flex flex-col items-center">
