Update email order option and add important notice

--- a/index.html
+++ b/index.html
@@ -943,14 +943,8 @@ END:VCALENDAR`;
                                     </div>
 
                                     <div class="option-box p-4">
-                                        <h4 class="font-bold text-purple-oven mb-2">Option 2: Email Orders To Us</h4>
+                                        <h4 class="font-bold text-purple-oven mb-2">Option 2: Order Online</h4>
                                         <p class="text-sm text-gray-700 mb-4">For orders tomorrow and onwards, please provide us with the details below and send the email to <span class="font-semibold text-purple-oven">orderonline@purpleoven.com.ph</span>. We will contact you to confirm the availability of your order before sending the bill.</p>
-                                        
-                                        <div class="bg-white bg-opacity-60 rounded p-3 text-sm text-gray-800 border border-purple-100">
-                                            <p class="font-bold text-purple-oven mb-1">Important Notice:</p>
-                                            <p class="mb-2">As we bake in limited quantities daily, please allow us to confirm the availability of your order prior to sending the bill.</p>
-                                            <p class="font-medium">We will call you as soon as we have received your email and reviewed your orders.</p>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -1056,6 +1050,13 @@ END:VCALENDAR`;
                             <div class="mb-8">
                                 <h3 id="itemSelectionTitle" class="text-lg font-semibold text-gray-700 mb-4 border-b pb-2">Select Items</h3>
                                 ${renderPurpleOvenMenuSelection()}
+                            </div>
+
+                            <!-- Important Notice Section -->
+                            <div class="mb-8 bg-purple-50 border border-purple-200 rounded-lg p-4 text-sm text-gray-700">
+                                <p class="font-bold text-gray-900 mb-2">Important Notice:</p> 
+                                <p class="mb-2">As we bake in limited quantities daily, please allow us to confirm the availability of your order prior to sending the bill.</p>
+                                <p class="mb-0">We will call you as soon as we have received your email and reviewed your orders.</p>
                             </div>
 
                             <div class="text-center pt-4 flex flex-col items-center">
