--- a/index.html
+++ b/index.html
@@ -944,7 +944,7 @@ END:VCALENDAR`;
 
                                     <div class="option-box p-4">
                                         <h4 class="font-bold text-purple-oven mb-2">Option 2: Order Online</h4>
-                                        <p class="text-sm text-gray-700 mb-4">For orders tomorrow and onwards, please provide us with the details below and send the email to <span class="font-semibold text-purple-oven">orderonline@purpleoven.com.ph</span>. We will contact you to confirm the availability of your order before sending the bill.</p>
+                                        <p class="text-sm text-gray-700 mb-4">For orders tomorrow and onwards, please provide us with the details below. We will contact you as soon as we can confirm your order.</p>
                                     </div>
                                 </div>
                             </div>
@@ -1077,9 +1077,9 @@ END:VCALENDAR`;
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
                                     </svg>
                                 </div>
-                                <h3 class="text-xl font-bold text-gray-900 mb-2">Thank you!</h3>
+                                <h3 class="text-xl font-bold text-gray-900 mb-2">Order Sent!</h3>
                                 <p class="text-gray-600 mb-6 font-medium">
-                                    Please expect a call from us before 6pm to confirm the availability of your order.
+                                    Please expect a call from us before 6pm to confirm your order. Thank you.
                                 </p>
                                 
                                 <!-- New Calendar Button -->
