Update notice text for order availability

--- a/index.html
+++ b/index.html
@@ -1055,8 +1055,8 @@ END:VCALENDAR`;
                             <!-- Important Notice Section -->
                             <div class="mb-8 bg-purple-50 border border-purple-200 rounded-lg p-4 text-sm text-gray-700">
                                 <p class="font-bold text-gray-900 mb-2">Important Notice:</p> 
-                                <p class="mb-2">As we bake in limited quantities daily, please allow us to confirm the availability of your order prior to sending the bill.</p>
-                                <p class="mb-0">We will call you as soon as we have received your email and reviewed your orders.</p>
+                                <p class="mb-2">As we bake in limited quantities daily, please allow us to check the availability of your order.</p>
+                                <p class="mb-0">We shall call you as soon as we can confirm your order.</p>
                             </div>
 
                             <div class="text-center pt-4 flex flex-col items-center">
