--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@
                         <div class="p-8 pb-4 text-center border-b border-gray-100">
                              <img src="${PO_LOGO_URL}" onerror="this.src='https://placehold.co/300x100/5D3FD3/fff?text=Purple+Oven'"
                                 alt="Purple Oven Logo" class="mx-auto h-24 w-auto object-contain mb-4">
-                            <h2 class="text-2xl font-bold text-purple-oven">Order Form</h2>
+                            <h2 class="text-2xl font-bold text-purple-oven">How to Order</h2>
                             <button type="button" onclick="showMenu('PurpleOven')" class="mt-4 text-sm text-gray-500 hover:text-purple-600 transition underline">
                                 ← Back to Menu
                             </button>
