--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@
                                 <!-- Delivery Notice -->
                                 <div id="deliveryNoticeContainer" class="notice-box p-4 hidden">
                                     <p class="text-sm text-gray-700">
-                                        <strong>Note:</strong> We do not have our own delivery fleet. Customers book their own courier (Grab, Lalamove, etc.). We can assist in handing over the items to your rider.
+                                        <strong>Note:</strong> We can arrange for delivery to your home, within Metro Manila. Please provide the delivery details below.
                                     </p>
                                 </div>
 
