Update instruction text for menu selection

--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
         function renderPurpleOvenMenuSelection() {
             let html = '';
             // Updated instruction text
-            html += `<p class="text-sm text-gray-500 mb-4 bg-gray-50 p-3 rounded-lg border border-gray-100">Check the items you want to order and input the desired quantity.</p>`;
+            html += `<p class="text-sm text-gray-500 mb-4 bg-gray-50 p-3 rounded-lg border border-gray-100">Please check on the product(s) of your choice and indicate the quantity to order.</p>`;
             html += `<div id="itemErrorContainer" class="mb-4 text-red-500 text-sm font-semibold"></div>`;
 
             const renderItemFields = (items, catIndex, subCatIndex) => {
